# zephyr-course

app/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
app/Drivers/OurDriver/: CMakeLists.txt  Kconfig  OurDriverSHELL.c  our_driver.c  our_driver.h
app/Drivers/OurDriver/zephyr/: module.yml
app/boards/: esp32s3_devkitc_esp32s3_procpu.overlay
app/src/: main.c
boards/our_board/: board.yml  our_board_appcpu.yaml  our_board_procpu.yaml
boards/our_new_board/: Kconfig  Kconfig.our_new_board  board.c  board.yml  our_new_board_procpu.dts
dts/bindings/: our,driver.yaml
hello_world/: CMakeLists.txt
